// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages returnValidity should render the page correctly 1`] = `
<Component
  description="Return Validity page of the Create Fares Data Service"
  errors={Array []}
  title="Return Validity - Create Fares Data Service"
>
  <CsrfForm
    action="/api/returnValidity"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <h1
        className="govuk-heading-l"
        id="return-validity-page-heading"
      >
        Is the return part of this ticket valid for more than one day?
      </h1>
      <span
        className="govuk-hint"
        id="return-validity-hint"
      >
        Select no if the return journey is only valid on the same day as the outbound journey
      </span>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Is the return part of this ticket valid for more than one day?",
              "hidden": true,
              "id": "define-return-validity",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "return-validity-defined-conditional",
                "id": "return-validity-defined",
                "inputErrors": Array [],
                "inputHint": Object {
                  "content": "Enter a number and select a duration from the dropdown",
                  "id": "define-return-validity-hint",
                },
                "inputType": "textWithUnits",
                "inputs": Array [
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-amount",
                    "label": "Number",
                    "name": "amount",
                  },
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-units",
                    "label": "Duration",
                    "name": "duration",
                    "options": Array [
                      "day",
                      "week",
                      "month",
                      "year",
                    ],
                  },
                ],
                "label": "Yes",
                "name": "validity",
                "value": "Yes",
              },
              Object {
                "id": "return-validity-not-defined",
                "label": "No",
                "name": "validity",
                "value": "No",
              },
            ],
          }
        }
        key="define-return-validity"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages returnValidity should render the page with errors when both text and dropdown input errors are present 1`] = `
<Component
  description="Return Validity page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number greater than zero",
        "id": "return-validity-amount",
      },
      Object {
        "errorMessage": "Choose one of the options from the dropdown list",
        "id": "return-validity-units",
      },
    ]
  }
  title="Return Validity - Create Fares Data Service"
>
  <CsrfForm
    action="/api/returnValidity"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number greater than zero",
            "id": "return-validity-amount",
          },
          Object {
            "errorMessage": "Choose one of the options from the dropdown list",
            "id": "return-validity-units",
          },
        ]
      }
    />
    <div
      className="govuk-form-group "
    >
      <h1
        className="govuk-heading-l"
        id="return-validity-page-heading"
      >
        Is the return part of this ticket valid for more than one day?
      </h1>
      <span
        className="govuk-hint"
        id="return-validity-hint"
      >
        Select no if the return journey is only valid on the same day as the outbound journey
      </span>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Is the return part of this ticket valid for more than one day?",
              "hidden": true,
              "id": "define-return-validity",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "return-validity-defined-conditional",
                "id": "return-validity-defined",
                "inputErrors": Array [
                  Object {
                    "errorMessage": "Enter a whole number greater than zero",
                    "id": "return-validity-amount",
                  },
                  Object {
                    "errorMessage": "Choose one of the options from the dropdown list",
                    "id": "return-validity-units",
                  },
                ],
                "inputHint": Object {
                  "content": "Enter a number and select a duration from the dropdown",
                  "id": "define-return-validity-hint",
                },
                "inputType": "textWithUnits",
                "inputs": Array [
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-amount",
                    "label": "Number",
                    "name": "amount",
                  },
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-units",
                    "label": "Duration",
                    "name": "duration",
                    "options": Array [
                      "day",
                      "week",
                      "month",
                      "year",
                    ],
                  },
                ],
                "label": "Yes",
                "name": "validity",
                "value": "Yes",
              },
              Object {
                "id": "return-validity-not-defined",
                "label": "No",
                "name": "validity",
                "value": "No",
              },
            ],
          }
        }
        key="define-return-validity"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages returnValidity should render the page with errors when only dropdown input errors are present 1`] = `
<Component
  description="Return Validity page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose one of the options from the dropdown list",
        "id": "return-validity-units",
      },
    ]
  }
  title="Return Validity - Create Fares Data Service"
>
  <CsrfForm
    action="/api/returnValidity"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose one of the options from the dropdown list",
            "id": "return-validity-units",
          },
        ]
      }
    />
    <div
      className="govuk-form-group "
    >
      <h1
        className="govuk-heading-l"
        id="return-validity-page-heading"
      >
        Is the return part of this ticket valid for more than one day?
      </h1>
      <span
        className="govuk-hint"
        id="return-validity-hint"
      >
        Select no if the return journey is only valid on the same day as the outbound journey
      </span>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Is the return part of this ticket valid for more than one day?",
              "hidden": true,
              "id": "define-return-validity",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "return-validity-defined-conditional",
                "id": "return-validity-defined",
                "inputErrors": Array [
                  Object {
                    "errorMessage": "Choose one of the options from the dropdown list",
                    "id": "return-validity-units",
                  },
                ],
                "inputHint": Object {
                  "content": "Enter a number and select a duration from the dropdown",
                  "id": "define-return-validity-hint",
                },
                "inputType": "textWithUnits",
                "inputs": Array [
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-amount",
                    "label": "Number",
                    "name": "amount",
                  },
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-units",
                    "label": "Duration",
                    "name": "duration",
                    "options": Array [
                      "day",
                      "week",
                      "month",
                      "year",
                    ],
                  },
                ],
                "label": "Yes",
                "name": "validity",
                "value": "Yes",
              },
              Object {
                "id": "return-validity-not-defined",
                "label": "No",
                "name": "validity",
                "value": "No",
              },
            ],
          }
        }
        key="define-return-validity"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages returnValidity should render the page with errors when only text input errors are present 1`] = `
<Component
  description="Return Validity page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number greater than zero",
        "id": "return-validity-amount",
      },
    ]
  }
  title="Return Validity - Create Fares Data Service"
>
  <CsrfForm
    action="/api/returnValidity"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number greater than zero",
            "id": "return-validity-amount",
          },
        ]
      }
    />
    <div
      className="govuk-form-group "
    >
      <h1
        className="govuk-heading-l"
        id="return-validity-page-heading"
      >
        Is the return part of this ticket valid for more than one day?
      </h1>
      <span
        className="govuk-hint"
        id="return-validity-hint"
      >
        Select no if the return journey is only valid on the same day as the outbound journey
      </span>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Is the return part of this ticket valid for more than one day?",
              "hidden": true,
              "id": "define-return-validity",
            },
            "radioError": Array [],
            "radios": Array [
              Object {
                "dataAriaControls": "return-validity-defined-conditional",
                "id": "return-validity-defined",
                "inputErrors": Array [
                  Object {
                    "errorMessage": "Enter a whole number greater than zero",
                    "id": "return-validity-amount",
                  },
                ],
                "inputHint": Object {
                  "content": "Enter a number and select a duration from the dropdown",
                  "id": "define-return-validity-hint",
                },
                "inputType": "textWithUnits",
                "inputs": Array [
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-amount",
                    "label": "Number",
                    "name": "amount",
                  },
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-units",
                    "label": "Duration",
                    "name": "duration",
                    "options": Array [
                      "day",
                      "week",
                      "month",
                      "year",
                    ],
                  },
                ],
                "label": "Yes",
                "name": "validity",
                "value": "Yes",
              },
              Object {
                "id": "return-validity-not-defined",
                "label": "No",
                "name": "validity",
                "value": "No",
              },
            ],
          }
        }
        key="define-return-validity"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages returnValidity should render the page with errors when radio errors are present 1`] = `
<Component
  description="Return Validity page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose one of the options below",
        "id": "return-validity-defined",
      },
    ]
  }
  title="Return Validity - Create Fares Data Service"
>
  <CsrfForm
    action="/api/returnValidity"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose one of the options below",
            "id": "return-validity-defined",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <h1
        className="govuk-heading-l"
        id="return-validity-page-heading"
      >
        Is the return part of this ticket valid for more than one day?
      </h1>
      <span
        className="govuk-hint"
        id="return-validity-hint"
      >
        Select no if the return journey is only valid on the same day as the outbound journey
      </span>
      <RadioConditionalInput
        fieldset={
          Object {
            "heading": Object {
              "content": "Is the return part of this ticket valid for more than one day?",
              "hidden": true,
              "id": "define-return-validity",
            },
            "radioError": Array [
              Object {
                "errorMessage": "Choose one of the options below",
                "id": "return-validity-defined",
              },
            ],
            "radios": Array [
              Object {
                "dataAriaControls": "return-validity-defined-conditional",
                "id": "return-validity-defined",
                "inputErrors": Array [],
                "inputHint": Object {
                  "content": "Enter a number and select a duration from the dropdown",
                  "id": "define-return-validity-hint",
                },
                "inputType": "textWithUnits",
                "inputs": Array [
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-amount",
                    "label": "Number",
                    "name": "amount",
                  },
                  Object {
                    "defaultValues": "",
                    "id": "return-validity-units",
                    "label": "Duration",
                    "name": "duration",
                    "options": Array [
                      "day",
                      "week",
                      "month",
                      "year",
                    ],
                  },
                ],
                "label": "Yes",
                "name": "validity",
                "value": "Yes",
              },
              Object {
                "id": "return-validity-not-defined",
                "label": "No",
                "name": "validity",
                "value": "No",
              },
            ],
          }
        }
        key="define-return-validity"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
